adicionando imagens reais e alterando textos

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     </header>
     <div class="container_Main">
         <main>
-            <img src="assets/placeholder.png" alt="Placeholder Image">
-            <h2 class="titles">titulo exemplo de video</h2>
+            <img src="assets/thumbnail.png" alt="Placeholder Image">
+            <h2 class="titles">Recreating youtube with HTML and CSS</h2>
             <div class="perfil">
                 <div class="chanel_info">
-                    <img src="assets/placeholderPerfil.png" alt="chanel profile picture">
+                    <img src="assets/perfil.jpg" alt="chanel profile picture">
                     <div id="chanel_text">
-                        <h3>canal</h3>
+                        <h3>InácioFerreira</h3>
                         <p>200 mil inscritos</p>
                     </div>
                 </div>
@@ -59,31 +59,44 @@
                     </div>
             </div>
             <h3 class="titles">28.418 visualizações  Transmitido ao vivo em 23 ago. de 2022</h3>
-            <p class="titles">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium itaque repudiandae mollitia minima veniam voluptatibus, ad, omnis totam cum est fugiat sint deleniti asperiores maxime nemo alias in odio perferendis!</p>
+            <p class="titles">Aprenda passo a passo como criar um clone completo da interface do YouTube usando apenas HTML e CSS!
+Neste tutorial, você vai descobrir como estruturar a página, organizar componentes, aplicar estilos modernos e recriar vários elementos visuais da plataforma — tudo de forma simples e prática.
+<br>
+💡 O que você vai aprender:
+<br>
+- Como organizar o layout usando HTML semântico
+<br>
+- Como estilizar cards de vídeo, thumbnails e barra lateral
+<br>
+- Técnicas de CSS modernas para responsividade
+<br>
+- Dicas de design para deixar seu clone mais profissional
+<br>
+🧑‍💻 Ideal para iniciantes e estudantes de front-end que querem melhorar suas habilidades e construir projetos reais para o portfólio.</p>
         </main>
         <aside>
             <span class="card">
-                <img src="assets/placeholder.png" alt="">
+                <img src="assets/gato-tank.jpg" alt="">
                 <div class="card_content">
-                    <h3>Título do Card</h3>
-                    <p>canal</p>
-                    <p>estatisticas</p>
+                    <h3>Gatinho dentro de um tanque</h3>
+                    <p>gato fora do tanque</p>
+                    <p>2,1 mil visualizações Transmitido há 2 dias</p>
                 </div>
             </span>
             <span class="card">
-                <img src="assets/placeholder.png" alt="">
+                <img src="assets/gato-burro.jpg" alt="">
                 <div class="card_content">
-                    <h3>Título do Card</h3>
-                    <p>canal</p>
-                    <p>estatisticas</p>
+                    <h3>Gato burrinho que não sabe fazer nada</h3>
+                    <p>Gatos burros</p>
+                    <p>1,6 mil visualizações Transmitido há 3 dias</p>
                 </div>
             </span>
             <span class="card">
-                <img src="assets/placeholder.png" alt="">
+                <img src="assets/gato-continencia.jpg" alt="">
                 <div class="card_content">
-                    <h3>Título do Card</h3>
-                    <p>canal</p>
-                    <p>estatisticas</p>
+                    <h3>Gato fazendo continência</h3>
+                    <p>Gato militar</p>
+                    <p>1,7 mil visualizações Transmitido há 4 dias</p>
                 </div>
             </span>
             <span class="card">
